--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-
-
+        classpath 'com.android.tools.build:gradle:8.8.1'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
 }
